--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "jguyomard/silex-pdo-boilerplate",
-    "description": "A Boilerplate for Silex 2 using PDO",
+    "name": "jguyomard/silex-eloquent-boilerplate",
+    "description": "A Boilerplate for Silex 2 using Eloquent ORM",
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +13,7 @@
         "symfony/config": "^3.0",
         "symfony/twig-bridge": "~2.7|3.0.*",
         "symfony/monolog-bridge": "~2.7|3.0.*",
-        "csanquer/pdo-service-provider": "~1.1@dev",
+        "jguyomard/silex-capsule-eloquent": "~2.0@dev",
         "jeromemacias/silex-debug": "~2.0@dev"
     },
     "autoload": {
@@ -27,5 +27,6 @@
         "branch-alias": {
             "dev-master/gulp": "2.0.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
